<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.aiven</groupId>
        <artifactId>klaw-project</artifactId>
        <version>2.0.0</version>
    </parent>

    <artifactId>klaw</artifactId>
    <packaging>jar</packaging>
    <name>Klaw Core</name>
    <description>Aiven Klaw - Core Api with user interface and cluster-api connectivity</description>

    <properties>
        <java.version>17</java.version>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- the list is sorted-->
        <apachecommons.version>2.11.0</apachecommons.version>
        <apachepoi.version>5.2.3</apachepoi.version>
        <commons-text.version>1.10.0</commons-text.version>
        <exec-maven-plugin.version>3.1.0</exec-maven-plugin.version>
        <front-end-maven-plugin.version>1.12.1</front-end-maven-plugin.version>
        <h2.version>2.1.214</h2.version>
        <jasyptencrypt.version>3.0.5</jasyptencrypt.version>
        <netty-all.version>4.1.80.Final</netty-all.version>
        <node.version>v18.12.1</node.version>
        <npm.version>8.19.2</npm.version>
        <pnpm.version>7.14.0</pnpm.version>
        <snakeyaml.version>1.33</snakeyaml.version>
        <springdoc-openapi-ui.version>1.6.14</springdoc-openapi-ui.version>
        <swagger-maven-plugin.version>3.1.8</swagger-maven-plugin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.ldap</groupId>
            <artifactId>spring-ldap-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-ldap</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-oauth2-client</artifactId>
        </dependency>
        <dependency>
            <groupId>org.thymeleaf.extras</groupId>
            <artifactId>thymeleaf-extras-springsecurity6</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webflux</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-mail</artifactId>
        </dependency>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>${commons-text.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>${apachepoi.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>${apachepoi.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${apachecommons.version}</version>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.ulisesbocchio</groupId>
            <artifactId>jasypt-spring-boot-starter</artifactId>
            <version>${jasyptencrypt.version}</version>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
        </dependency>
        <dependency>
            <groupId>io.projectreactor.netty</groupId>
            <artifactId>reactor-netty</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
        </dependency>
        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-ui</artifactId>
            <version>${springdoc-openapi-ui.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
        </dependency>
    </dependencies>

    <build>
        <!--
            Using filtering means we have to explicitly control Resources for Test and production..
        -->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>application.properties</include>
                </includes>
                    <excludes>
                        <exclude>static</exclude>
                        <exclude>template</exclude>
                        <exclude>**/*.sql</exclude>
                        <exclude>**/*.yaml</exclude>
                    </excludes>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>application.properties</exclude>
                </excludes>
                <includes>
                    <include>**</include>
                </includes>
                <filtering>false</filtering>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <includes>
                    <include>*</include>
                </includes>
                <filtering>true</filtering>
            </testResource>
            <testResource>
                <directory>src/main/resources/</directory>
                <includes>
                    <include>application.properties</include>
                </includes>
                <excludes>
                    <exclude>static</exclude>
                    <exclude>template</exclude>
                    <exclude>**/*.sql</exclude>
                    <exclude>**/*.yaml</exclude>
                </excludes>
                <filtering>true</filtering>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${exec-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>uglifyjs-files</id>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <phase>test</phase>
                        <configuration>
                            <mainClass>io.aiven.klaw.uglify.UglifyFiles</mainClass>
                        </configuration>
                    </execution>
                    <execution>
                        <id>Clean Coral assets before building</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <phase>clean</phase>
                        <configuration>
                            <executable>make</executable>
                            <commandlineArgs>clean</commandlineArgs>
                        </configuration>
                    </execution>
                    <execution>
                        <id>Build and copy Coral assets</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <phase>generate-resources</phase>
                        <configuration>
                            <executable>make</executable>
                            <commandlineArgs>src/main/resources/templates/coral/index.html src/main/resources/static/assets/coral</commandlineArgs>
                            <!-- Ignore errors during the execution of this plugin to unblock the user during build process -->
                            <successCodes>
                                <successCode>0</successCode>
                                <successCode>1</successCode>
                                <!-- Continue to build if pnpm is not installed -->
                                <successCode>2</successCode>
                            </successCodes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.github.kongchen</groupId>
                <artifactId>swagger-maven-plugin</artifactId>
                <version>${swagger-maven-plugin.version}</version>
                <configuration>
                    <apiSources>
                        <apiSource>
                            <springmvc>true</springmvc>
                            <locations>
                                <location>io.aiven.klaw.controller</location>
                            </locations>
                            <basePath>/</basePath>
                            <info>
                                <title>Klaw Core</title>
                                <version>${project.parent.version}</version>
                                <contact>
                                    <email>info@klaw-project.io</email>
                                </contact>
                            </info>
                            <outputFormats>json</outputFormats>
                            <swaggerFileName>swagger_spec</swaggerFileName>
                            <swaggerDirectory>${project.basedir}/src/main/resources</swaggerDirectory>
                        </apiSource>
                    </apiSources>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
